--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "mdx-deck": "^1.7.7"
   },
   "scripts": {
-    "start": "mdx-deck deck.mdx"
+    "start": "mdx-deck deck.mdx",
     "build": "mdx-deck build deck.mdx"
   }
 }
